@@ -5,3 +5,5 @@ Sebastian Dransfeld <sd@tango.flipp.net>
 Cedric Bail <cedric.bail@free.fr>
 Rafael Antognolli <antognolli@profusion.mobi>
 Jérôme Pinot <ngc891@gmail.com>
+Pierre Le Magourou <pierre.lemagourou@openwide.fr>
+Hugo Camboulive <hugo.camboulive@zodiacaerospace.com>
