@@ -5,6 +5,7 @@ Changes since Emotion 1.0.0:
 
 Additions:
 	- Add support for "playback_started" callback to generic player.
+	- Implement SPU switch for generic/vlc.
 
 Fixes:
 	- build out of tree.
